updates to html validation on mobile view, and fixes for footer section with styles

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -285,7 +285,6 @@ input[name='q']::placeholder {
 
 footer {
     background-color: whitesmoke;
-    position: absolute;
 }
 
 .social-icon {
